--- a/vasca/examples/inspect_artifacts.ipynb
+++ b/vasca/examples/inspect_artifacts.ipynb
@@ -37,18 +37,39 @@
     "           #{\"field_id\":\"\", \"ra\":, \"dec\":, \"rad\":0.01},\n",
     "           #{\"field_id\":\"\", \"ra\":, \"dec\":, \"rad\":0.01},\n",
     "           #{\"field_id\":\"\", \"ra\":, \"dec\":, \"rad\":0.01}, \n",
-    "        ]"
+    "        ]\n",
+    "\n",
+    "# Variables to select detections and plotting options\n",
+    "import numpy as np\n",
+    "\n",
+    "#Select artifacts that lead to detection removal. New column with \"art_sel\" will be created for detections to cut on. \n",
+    "#This variable is zero if none of the artifacts below is selected, othervise the \"artifact value\"\n",
+    "art_bit_sel = [2,4,8,128] # http://www.galex.caltech.edu/wiki/GCAT_Manual#Flags\n",
+    "\n",
+    "s2n_min    = 3.5                                                     # Minimum s2n of detections\n",
+    "r_fov_max  = 0.55                                                    #;aximum distance from the camera center\n",
+    "vars       = [\"ellip_world\",\"size_world\",\"class_star\",\"art_sel\"]     # Variables to be used to select detections on artifacts\n",
+    "vars_sel   = [[0.2,1.0]    ,[7,np.inf] ,[-0.5,0.01] ,[0.5,np.inf]]   # Selection of detections on artifacts\n",
+    "vars_col   = [\"b\"          ,\"m\"         ,\"g\"         ,\"w\"]           # Circle color for selected detections on artifacts\n",
+    "vars_ms    = [8            ,6.5         , 5          ,3.5]           # Marker size of circles showing detections selected by these artifacts. \n",
+    "vars_bins  = [20           ,\"sqrt\"      , 20         ,\"sqrt\"]        # Nr bins for histogram plots\n",
+    "vars_log   = [False        ,True        , False      , True ]        # Show histograms in logy?\n",
+    "lw = 0.8                                                             # Line width for circles of detections on skymaps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2e7980c-fd21-4909-8a2c-9047beb7a4c1",
+   "metadata": {},
+   "source": [
+    "### Load region"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "id": "dbb1bbbb-3d8e-4475-89ca-d97839217283",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib widget\n",
@@ -60,7 +81,8 @@
     "from astropy import units as uu\n",
     "from astropy.coordinates import SkyCoord\n",
     "from astropy.wcs.utils import pixel_to_skycoord\n",
-    "import numpy as np\n",
+    "from astropy.table import Table\n",
+    "from astropy.nddata import bitmask\n",
     "\n",
     "from vasca.region import Region\n",
     "from vasca.field import BaseField\n",
@@ -71,8 +93,15 @@
     "#Load region and field\n",
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\".fits\"\n",
     "rg = Region()\n",
-    "rg.load_from_fits(region_fname)\n",
-    "#display(rg.tt_fields)"
+    "rg.load_from_fits(region_fname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3ee61ad-3d92-4260-9a42-5c6bd538539d",
+   "metadata": {},
+   "source": [
+    "### Display detections"
    ]
   },
   {
@@ -84,7 +113,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab006b1abe6f4629af37734bdc920fa7",
+       "model_id": "9e5b99cc6a16406bbb8cce6293952012",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,78 +128,74 @@
    ],
    "source": [
     "def plot_art(art_idx):\n",
+    "    # Get field\n",
     "    dd_art = dd_arts[art_idx]\n",
     "    fd = rg.get_field(field_id=dd_art[\"field_id\"], load_method=\"FITS\", add_field=True)\n",
+    "\n",
+    "  \n",
+    "    # Prepare figute and sky region\n",
     "    fig_art = plt.figure(\"Sky map artifact\",figsize=(8, 7))\n",
-    "    \n",
     "    sky_center = SkyCoord(dd_art[\"ra\"]*uu.deg, dd_art[\"dec\"]*uu.deg, frame=\"icrs\")\n",
     "    sky_art= CircleSkyRegion(center=sky_center, radius=dd_art[\"rad\"]*uu.deg)\n",
     "    plt.cla()\n",
     "    ax, wcs_art = vvis.plot_field_sky_map(fd, img_idx=-1, sky_region = sky_art, fig=fig_art)\n",
+    "\n",
+    "    #Apply s2n  and r_fov cutcut\n",
+    "    sel_s2nfov = (fd.tt_detections[\"s2n\"]>s2n_min)*(fd.tt_detections[\"r_fov\"]<r_fov_max)\n",
+    "    nr_det = sel_s2nfov.sum()\n",
+    "    fd.tt_detections[\"sel\"]  = sel_s2nfov\n",
+    "    tt_det_all = fd.tt_detections[sel_s2nfov]\n",
+    "\n",
+    "\n",
+    "    # Apply bitmask cut\n",
+    "    # See https://docs.astropy.org/en/stable/api/astropy.nddata.bitfield_to_boolean_mask.html\n",
+    "    bit = bitmask.bitfield_to_boolean_mask(\n",
+    "        tt_det_all[\"artifacts\"],\n",
+    "        flip_bits=True,\n",
+    "        dtype=bool,\n",
+    "        good_mask_value=0,\n",
+    "        ignore_flags=art_bit_sel,\n",
+    "    )\n",
+    "    tt_det_all[\"art_sel\"] = tt_det_all[\"artifacts\"] * bit\n",
+    "\n",
+    "    #Plot all detections that pass s2n\n",
+    "    kdet_s2n = {\"marker\":\"o\",\"color\":\"r\",\"markersize\": 10,\"alpha\":1,\"markeredgewidth\": lw}\n",
+    "    ax, tt_det = vvis.plot_sky_sources(tt_det_all, src_id=None,src_kwargs=kdet_s2n, sky_region_wcs = (sky_art,wcs_art), only_selected=True)\n",
     "    \n",
-    "    print(\"all:red, ellipse:blue , class_star:green, artifact:white\")\n",
-    "    lw= 0.8\n",
-    "    sel_s2n = fd.tt_detections[\"s2n\"]>3.5\n",
-    "    fd.tt_detections[\"sel\"]  = sel_s2n\n",
-    "    kdet_s2n = {\"marker\":\"o\",\"color\":\"r\",\"markersize\": 8,\"alpha\":1,\"markeredgewidth\": lw}\n",
-    "    ax, tt_det = vvis.plot_sky_sources( fd.tt_detections, src_id=None,src_kwargs=kdet_s2n, sky_region_wcs = (sky_art,wcs_art), only_selected=True)\n",
+    "    if len(tt_det) == 0:\n",
+    "        print(\"No detections passed the s2n and r_fov cut in this cutout\")\n",
+    "        plt.show()\n",
+    "        return\n",
+    "\n",
+    "    #Get cut efficiencies for field\n",
+    "    tt_eff = Table()\n",
+    "    sel_var_tot = np.zeros(len(tt_det_all), dtype=bool) # Total selections without artifactcut\n",
+    "    for ii in range(len(vars)):\n",
+    "        sel_art = (tt_det_all[vars[ii]]>vars_sel[ii][0]) * (tt_det_all[vars[ii]]<vars_sel[ii][1])\n",
+    "        sel_var_tot += sel_art\n",
+    "        tt_eff[vars[ii]] = [round(1.-sel_art.sum()/ nr_det,4)]\n",
+    "    tt_eff[\"var_tot\"] = [round(1.-sel_var_tot.sum()/ nr_det,4)]\n",
     "    \n",
-    "    sel_ell = tt_det[\"ellip_world\"]>0.5\n",
-    "    tt_det[\"sel\"]  = sel_ell\n",
-    "    kdet_ell = {\"marker\":\"o\",\"color\":\"b\",\"markersize\": 6.5,\"alpha\":1,\"markeredgewidth\": lw}\n",
-    "    ax, tt_det_ell = vvis.plot_sky_sources(tt_det, src_id=None,src_kwargs=kdet_ell, sky_region_wcs = (sky_art,wcs_art), only_selected=True)\n",
-    "    \n",
-    "    sel_cs = tt_det[\"class_star\"]<0.5\n",
-    "    tt_det[\"sel\"]  = sel_cs\n",
-    "    kdet_cs = {\"marker\":\"o\",\"color\":\"g\",\"markersize\": 5,\"alpha\":1,\"markeredgewidth\": lw}\n",
-    "    ax, tt_det_cs = vvis.plot_sky_sources(tt_det, src_id=None,src_kwargs=kdet_cs, sky_region_wcs = (sky_art,wcs_art), only_selected=True)\n",
-    "    \n",
-    "    sel_art = tt_det[\"artifacts\"]>0\n",
-    "    tt_det[\"sel\"]  = sel_art\n",
-    "    kdet_art = {\"marker\":\"o\",\"color\":\"w\",\"markersize\": 3.5,\"alpha\":1,\"markeredgewidth\": lw}\n",
-    "    ax, tt_det_art = vvis.plot_sky_sources(tt_det, src_id=None,src_kwargs=kdet_art, sky_region_wcs = (sky_art,wcs_art), only_selected=True)\n",
+    "    #Plot circles for detections passing different cuts\n",
+    "    for ii in range(len(vars)):\n",
+    "        sel= (tt_det[vars[ii]]>vars_sel[ii][0]) * (tt_det[vars[ii]]<vars_sel[ii][1])\n",
+    "        kdet_ell = {\"marker\":\"o\",\"color\":vars_col[ii],\"markersize\": vars_ms[ii],\"alpha\":1,\"markeredgewidth\": lw}\n",
+    "        vvis.plot_sky_sources(tt_det[sel], src_id=None,src_kwargs=kdet_ell, sky_region_wcs = (sky_art,wcs_art), only_selected=True)\n",
+    "    plt.tight_layout()\n",
     "    plt.show()\n",
     "    \n",
     "    #Draw some distributions in field\n",
-    "    fig_dist, axs = plt.subplots(1,4,figsize=(12, 3.5),squeeze=False)\n",
+    "    fig_dist, axs = plt.subplots(1,4,figsize=(12, 3.5))\n",
     "    axs = axs.flatten()\n",
-    "    plot_vars = [\"ellip_world\",\"size_world\",\"class_star\",\"artifacts\"]\n",
-    "    plot_bins = [20           ,20          , 20         , \"sqrt\"]\n",
-    "    plot_log  = [False        , False       , False      , True ]\n",
     "    for ii in range(0,4):\n",
-    "        axs[ii].hist([fd.tt_detections[plot_vars[ii]],tt_det[plot_vars[ii]]],density=True, bins = plot_bins[ii], log = plot_log[ii])\n",
-    "        #axs[ii].hist()\n",
-    "        axs[ii].set_xlabel(plot_vars[ii])\n",
-    "    \n",
+    "        axs[ii].hist([tt_det_all[vars[ii]],tt_det[vars[ii]]],density=True, bins = vars_bins[ii], log = vars_log[ii], histtype=\"step\")\n",
+    "        axs[ii].set_xlabel(vars[ii])\n",
+    "    plt.tight_layout()\n",
     "    plt.show()\n",
-    "    display(tt_det)\n",
+    "\n",
+    "    display(tt_det[[\"ra\",\"dec\", \"artifacts\",\"r_fov\"]+vars])\n",
+    "    display(\"Kept fraction of detections in entire field\",tt_eff)\n",
     "widgets.interactive( plot_art, art_idx=widgets.IntSlider(min=0, max=len(dd_arts)-1, value=0, step=1))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4d941a6f-ceaa-49ee-bd4d-eac66de3959a",
-   "metadata": {},
-   "source": [
-    "Interresting cases (ICCS):\n",
-    "* 241.49, 55.50: Extended sourse cut out by class_star cut, but not ellipse"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "3d6cf13f-3956-4f70-9469-725c531a6a5f",
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#selections = { \"table\":\"tt_detections\",\"presel_type\":\"and\", \"sel_type\":\"and\",\n",
-    "#              \"range\": {\"s2n\":[3.5,np.inf],\"r_fov\":[0.0,0.55], \"class_star\": [0.6,1.0] ,\"chkobj_type\": [-0.5,0.5]}}\n",
-    "#print(selections)\n",
-    "#fd.select_rows(selections, remove_unselected=False)"
    ]
   }
  ],
