--- a/vasca/examples/inspect_artifacts.ipynb
+++ b/vasca/examples/inspect_artifacts.ipynb
@@ -46,10 +46,10 @@
     "#This variable is zero if none of the artifacts below is selected, othervise the \"artifact value\"\n",
     "art_bit_sel = [2,4,8,128] # http://www.galex.caltech.edu/wiki/GCAT_Manual#Flags\n",
     "\n",
-    "s2n_min    = 3.5                                                     # Minimum s2n of detections\n",
-    "r_fov_max  = 0.55                                                    #;aximum distance from the camera center\n",
+    "s2n_min    = 5                                                       # Minimum s2n of detections\n",
+    "r_fov_max  = 0.5                                                     #Maximum distance from the camera center\n",
     "vars       = [\"ellip_world\",\"size_world\",\"class_star\",\"art_sel\"]     # Variables to be used to select detections on artifacts\n",
-    "vars_sel   = [[0.2,1.0]    ,[7,np.inf] ,[-0.5,0.01] ,[0.5,np.inf]]   # Selection of detections on artifacts\n",
+    "vars_sel   = [[0.35,1.0]    ,[7,np.inf] ,[-0.5,0.01] ,[0.5,np.inf]]   # Selection of detections on artifacts\n",
     "vars_col   = [\"b\"          ,\"m\"         ,\"g\"         ,\"w\"]           # Circle color for selected detections on artifacts\n",
     "vars_ms    = [8            ,6.5         , 5          ,3.5]           # Marker size of circles showing detections selected by these artifacts. \n",
     "vars_bins  = [20           ,\"sqrt\"      , 20         ,\"sqrt\"]        # Nr bins for histogram plots\n",
@@ -113,7 +113,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9e5b99cc6a16406bbb8cce6293952012",
+       "model_id": "40f04f1fc55b4b34b5acc0228fd5658d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -141,8 +141,10 @@
     "    ax, wcs_art = vvis.plot_field_sky_map(fd, img_idx=-1, sky_region = sky_art, fig=fig_art)\n",
     "\n",
     "    #Apply s2n  and r_fov cutcut\n",
-    "    sel_s2nfov = (fd.tt_detections[\"s2n\"]>s2n_min)*(fd.tt_detections[\"r_fov\"]<r_fov_max)\n",
-    "    nr_det = sel_s2nfov.sum()\n",
+    "    nr_det = len(fd.tt_detections)\n",
+    "    sel_s2n = (fd.tt_detections[\"s2n\"]>s2n_min)\n",
+    "    sel_fov = (fd.tt_detections[\"r_fov\"]<r_fov_max)\n",
+    "    sel_s2nfov = sel_s2n * sel_fov\n",
     "    fd.tt_detections[\"sel\"]  = sel_s2nfov\n",
     "    tt_det_all = fd.tt_detections[sel_s2nfov]\n",
     "\n",
@@ -169,12 +171,18 @@
     "\n",
     "    #Get cut efficiencies for field\n",
     "    tt_eff = Table()\n",
-    "    sel_var_tot = np.zeros(len(tt_det_all), dtype=bool) # Total selections without artifactcut\n",
+    "    tt_eff[\"s2n\"] = [round(sel_s2n.sum()/nr_det,6)]\n",
+    "    tt_eff[\"r_fov\"] = [round(sel_fov.sum()/nr_det,6)]\n",
+    "    tt_eff[\"s2nfov\"] = [round(sel_s2nfov.sum()/nr_det,6)]\n",
+    "    sel_art_tot = np.zeros(len(tt_det_all), dtype=bool) # Total selections without artifactcut\n",
     "    for ii in range(len(vars)):\n",
     "        sel_art = (tt_det_all[vars[ii]]>vars_sel[ii][0]) * (tt_det_all[vars[ii]]<vars_sel[ii][1])\n",
-    "        sel_var_tot += sel_art\n",
-    "        tt_eff[vars[ii]] = [round(1.-sel_art.sum()/ nr_det,4)]\n",
-    "    tt_eff[\"var_tot\"] = [round(1.-sel_var_tot.sum()/ nr_det,4)]\n",
+    "        sel_art_tot += sel_art\n",
+    "        tt_eff[vars[ii]] = [round(1.-sel_art.sum()/ nr_det,6)]\n",
+    "    sel_noart = ~(sel_art_tot>0)\n",
+    "    tt_eff[\"total\"] = [round((sel_s2nfov.sum()/ nr_det)*(sel_noart.sum()/len(tt_det_all)),6)]\n",
+    "\n",
+    "    # Add s2n und fov cut efficiencies\n",
     "    \n",
     "    #Plot circles for detections passing different cuts\n",
     "    for ii in range(len(vars)):\n",
@@ -193,7 +201,7 @@
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
-    "    display(tt_det[[\"ra\",\"dec\", \"artifacts\",\"r_fov\"]+vars])\n",
+    "    display(tt_det[[\"ra\",\"dec\", \"artifacts\",\"r_fov\",\"s2n\"]+vars])\n",
     "    display(\"Kept fraction of detections in entire field\",tt_eff)\n",
     "widgets.interactive( plot_art, art_idx=widgets.IntSlider(min=0, max=len(dd_arts)-1, value=0, step=1))"
    ]
