--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "region_name = \"TDS_ELAISN1\" # _ELAISN1\n",
     "sort_par = \"rg_src_id\" # \"flux\"\n",
-    "redo_src_sel = True\n",
+    "redo_src_sel = False\n",
     "only_sel_srcs = True\n",
     "srcs_ids = [] #[ 1932,  2017,  2018,  2849,  3839,  4300,  4665,  5239,  6173, 6217,  7125,  8407,  9443,  9710, 13543, 14042, 16926, 18771, 19305, 19909, 19986, 27586, 28065, 30891, 30911, 31661, 33963,34725, 35193, 35636]"
    ]
@@ -44,7 +44,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nr sources: 43958 / 301\n"
+      "Nr sources: 17408 / 272\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
     "if redo_src_sel:\n",
     "    sel_vasca =  sel_sources(rg.tt_sources)\n",
     "    rg.tt_sources[\"sel\"][:]=sel_vasca \n",
-    "print(\"Nr sources:\",len(rg.tt_sources),\"/\",rg.tt_sources[\"sel\"].sum())\n",
+    "print(\"Nr sources:\",len(rg.tt_sources),\"selected:\",rg.tt_sources[\"sel\"].sum())\n",
     "    \n",
     "tt_srcs = rg.tt_sources\n",
     "\n",
@@ -111,12 +111,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5007d7b54c134e0c9516cf457d659166",
+       "model_id": "e64ab616c3e6448e8c97d93181e8c980",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(42, 112, 139, 162, 171, 173, 193, 231…"
+       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(21, 26, 27, 52, 76, 104, 139, 180, 20…"
       ]
      },
      "metadata": {},
@@ -245,7 +245,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4281ee9f644d4b6dbaf021859a521f54",
+       "model_id": "6b86fcc9a5704bd58044ee8c75bca793",
        "version_major": 2,
        "version_minor": 0
       },
@@ -290,12 +290,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1f23c2877f246feb7cad27c0c175808",
+       "model_id": "cc86a072febf4692bfadc3da39f91f2f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=30, description='block_nr', max=60), Output()), _dom_classes=('widget-in…"
+       "interactive(children=(IntSlider(value=27, description='block_nr', max=54), Output()), _dom_classes=('widget-in…"
       ]
      },
      "execution_count": 5,
