Added world_ellipse coordinates to diagnistics
Former-commit-id: 872dc5c0d711f56f2d7829b114b4b5e7498aa8d8

--- a/vasca/examples/inspect_artifacts.ipynb
+++ b/vasca/examples/inspect_artifacts.ipynb
@@ -29,13 +29,21 @@
     "dd_arts = [{\"field_id\":\"GNU2597312684324028416\", \"ra\":243.31, \"dec\":55.79, \"rad\":0.01},   # 0 Detection structures next to bright source\n",
     "           {\"field_id\":\"GNU2597312684324028416\", \"ra\":243.28, \"dec\":55.76, \"rad\":0.02},   # 1 Multiple circular artifacts due to bright star\n",
     "           {\"field_id\":\"GNU2597312684324028416\", \"ra\":243.41, \"dec\":56.27, \"rad\":0.02},   # 2 Edge line\n",
-    "           {\"field_id\":\"GNU2597523790556561408\", \"ra\":241.405, \"dec\":55.615, \"rad\":0.01}, # 3 Ring without bright source\n",
+    "           {\"field_id\":\"GNU2597523790556561408\", \"ra\":241.405, \"dec\":55.615, \"rad\":0.01}, # 3 Ring without bright source,  Galaxy MCG+09-26-052 \n",
     "           {\"field_id\":\"GNU2597523790556561408\", \"ra\":241.58, \"dec\":55.43, \"rad\":0.01},   # 4 Line artifact\n",
-    "           {\"field_id\":\"GNU2597594159300739072\", \"ra\":244.30, \"dec\":53.695, \"rad\":0.02},  # 5 Edge line\n",
-    "           {\"field_id\":\"GNU2597664528044916736\", \"ra\":242.79, \"dec\":53.97, \"rad\":0.01},   # 6 Ghost next to bright source\n",
-    "           {\"field_id\":\"GFU2597312684324028416\", \"ra\":243.36, \"dec\":55.75, \"rad\":0.07},   # 7 Very bright star makes cross, also effects in NUV idx 0,1\n",
-    "           #{\"field_id\":\"\", \"ra\":, \"dec\":, \"rad\":0.01},\n",
-    "           #{\"field_id\":\"\", \"ra\":, \"dec\":, \"rad\":0.01},\n",
+    "           {\"field_id\":\"GNU2597523790556561408\", \"ra\":241.77, \"dec\":55.48, \"rad\":0.05},   # 5 Multiple rings\n",
+    "           {\"field_id\":\"GNU2597523790556561408\", \"ra\":240.81, \"dec\":55.17, \"rad\":0.03},   # 6 Faint ring\n",
+    "           {\"field_id\":\"GNU2597594159300739072\", \"ra\":244.30, \"dec\":53.695, \"rad\":0.02},  # 7 Edge line\n",
+    "           {\"field_id\":\"GNU2597664528044916736\", \"ra\":242.79, \"dec\":53.97, \"rad\":0.01},   # 8 Ghost next to bright source\n",
+    "           {\"field_id\":\"GNU2597664528044916736\", \"ra\":242.77, \"dec\":54.36, \"rad\":0.03},   # 9 Faint ring\n",
+    "           {\"field_id\":\"GFU2597312684324028416\", \"ra\":243.36, \"dec\":55.75, \"rad\":0.07},   # 10 Very bright star makes cross, also effects in NUV\n",
+    "           {\"field_id\":\"GNU2597383053068206080\", \"ra\":245.22, \"dec\":54.90, \"rad\":0.03},   # 11 Ring\n",
+    "           {\"field_id\":\"GNU2597734896789094400\", \"ra\":241.67, \"dec\":54.69, \"rad\":0.03},   # 12 Ring\n",
+    "           {\"field_id\":\"GNU2597734896789094400\", \"ra\":241.12, \"dec\":54.42, \"rad\":0.03},   # 13 Ring\n",
+    "           {\"field_id\":\"GFU2597523790556561408\", \"ra\":241.405, \"dec\":55.615, \"rad\":0.03}  # 14 Ring without bright source, also NuV, Galaxy MCG+09-26-052 \n",
+    "           #{\"field_id\":\"\", \"ra\":, \"dec\":, \"rad\":0.01}, \n",
+    "           #{\"field_id\":\"\", \"ra\":, \"dec\":, \"rad\":0.01}, \n",
+    "           #{\"field_id\":\"\", \"ra\":, \"dec\":, \"rad\":0.01}, \n",
     "           #{\"field_id\":\"\", \"ra\":, \"dec\":, \"rad\":0.01}, \n",
     "        ]\n",
     "\n",
@@ -47,7 +55,7 @@
     "art_bit_sel = [2,4,8,128] # http://www.galex.caltech.edu/wiki/GCAT_Manual#Flags\n",
     "\n",
     "s2n_min    = 5                                                       # Minimum s2n of detections\n",
-    "r_fov_max  = 0.5                                                     #Maximum distance from the camera center\n",
+    "r_fov_max  = 0.6                                                     #Maximum distance from the camera center\n",
     "vars       = [\"ellip_world\",\"size_world\",\"class_star\",\"art_sel\"]     # Variables to be used to select detections on artifacts\n",
     "vars_sel   = [[0.35,1.0]    ,[7,np.inf] ,[-0.5,0.01] ,[0.5,np.inf]]   # Selection of detections on artifacts\n",
     "vars_col   = [\"b\"          ,\"m\"         ,\"g\"         ,\"w\"]           # Circle color for selected detections on artifacts\n",
@@ -113,12 +121,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40f04f1fc55b4b34b5acc0228fd5658d",
+       "model_id": "38fcc5df2c864d86b7713a8083cf97e9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='art_idx', max=7), Output()), _dom_classes=('widget-inter…"
+       "interactive(children=(IntSlider(value=0, description='art_idx', max=14), Output()), _dom_classes=('widget-inte…"
       ]
      },
      "execution_count": 3,
