--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -34,9 +34,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "a47713fa-f128-425f-a2d0-754e64ffb654",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
@@ -44,8 +45,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nr sources: 17408 / 272\n"
+      "Nr sources: 17408 selected: 272\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><i>Table length=14</i>\n",
+       "<table id=\"table139925948651152\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>field_id</th><th>field_name</th><th>ra</th><th>dec</th><th>observatory</th><th>obs_filter</th><th>fov_diam</th><th>sel</th><th>nr_vis</th><th>time_bin_size_sum</th><th>time_start</th><th>time_stop</th><th>rg_fd_id</th></tr></thead>\n",
+       "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th>deg</th><th></th><th></th><th>s</th><th>d</th><th>d</th><th></th></tr></thead>\n",
+       "<thead><tr><th>bytes32</th><th>bytes32</th><th>float64</th><th>float64</th><th>bytes22</th><th>bytes8</th><th>float32</th><th>bool</th><th>int32</th><th>float32</th><th>float64</th><th>float64</th><th>int64</th></tr></thead>\n",
+       "<tr><td>GNU2597312684324028416</td><td>PS_ELAISN1_MOS10</td><td>242.50638203682297</td><td>55.9801443588634</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>24</td><td>29566.4</td><td>54960.17787037037</td><td>56821.33210648148</td><td>1</td></tr>\n",
+       "<tr><td>GNU2597383053068206080</td><td>PS_ELAISN1_MOS11</td><td>244.57200462478102</td><td>55.1825511621234</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>25</td><td>31369.5</td><td>54960.24638888889</td><td>56815.50054271557</td><td>2</td></tr>\n",
+       "<tr><td>GNU2597453421812383744</td><td>PS_ELAISN1_MOS12</td><td>242.896209389035</td><td>55.0003489374844</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>21</td><td>26349.451</td><td>54960.314884259256</td><td>56814.569061234084</td><td>3</td></tr>\n",
+       "<tr><td>GNU2597523790556561408</td><td>PS_ELAISN1_MOS13</td><td>241.28881797574297</td><td>55.3529870930308</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>22</td><td>27810.902</td><td>54960.38337962963</td><td>56819.53759259259</td><td>4</td></tr>\n",
+       "<tr><td>GNU2597594159300739072</td><td>PS_ELAISN1_MOS14</td><td>243.95513153083402</td><td>54.1978605194106</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>22</td><td>26881.852</td><td>54960.451886574076</td><td>56810.60611111111</td><td>5</td></tr>\n",
+       "<tr><td>GNU2597664528044916736</td><td>PS_ELAISN1_MOS15</td><td>242.396514585217</td><td>53.9999872930018</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>22</td><td>28044.65</td><td>54960.52040509259</td><td>56810.67461805556</td><td>6</td></tr>\n",
+       "<tr><td>GNU2597734896789094400</td><td>PS_ELAISN1_MOS16</td><td>241.37385712300306</td><td>54.4519391954855</td><td>GALEX</td><td>NUV</td><td>1.2</td><td>True</td><td>21</td><td>26780.799</td><td>54960.588912037034</td><td>56807.7931854022</td><td>7</td></tr>\n",
+       "<tr><td>GFU2597312684324028416</td><td>PS_ELAISN1_MOS10</td><td>242.50638203682297</td><td>55.9801443588634</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>5</td><td>6920.1</td><td>54960.17787037037</td><td>56504.46356481482</td><td>8</td></tr>\n",
+       "<tr><td>GFU2597383053068206080</td><td>PS_ELAISN1_MOS11</td><td>244.57200462478102</td><td>55.1825511621234</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>5</td><td>6896.3994</td><td>54960.24638888889</td><td>56501.58207429109</td><td>9</td></tr>\n",
+       "<tr><td>GFU2597453421812383744</td><td>PS_ELAISN1_MOS12</td><td>242.896209389035</td><td>55.0003489374844</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>5</td><td>6929.0996</td><td>54960.314884259256</td><td>56508.650511791086</td><td>10</td></tr>\n",
+       "<tr><td>GFU2597523790556561408</td><td>PS_ELAISN1_MOS13</td><td>241.28881797574297</td><td>55.3529870930308</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>5</td><td>6942.2</td><td>54960.38337962963</td><td>56506.76889919705</td><td>11</td></tr>\n",
+       "<tr><td>GFU2597594159300739072</td><td>PS_ELAISN1_MOS14</td><td>243.95513153083402</td><td>54.1978605194106</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>5</td><td>6951.2</td><td>54960.451886574076</td><td>56513.78742151331</td><td>12</td></tr>\n",
+       "<tr><td>GFU2597664528044916736</td><td>PS_ELAISN1_MOS15</td><td>242.396514585217</td><td>53.9999872930018</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>5</td><td>6977.0</td><td>54960.52040509259</td><td>56519.80583333333</td><td>13</td></tr>\n",
+       "<tr><td>GFU2597734896789094400</td><td>PS_ELAISN1_MOS16</td><td>241.37385712300306</td><td>54.4519391954855</td><td>GALEX</td><td>FUV</td><td>1.2</td><td>True</td><td>5</td><td>6887.0</td><td>54960.588912037034</td><td>56510.974315863714</td><td>14</td></tr>\n",
+       "</table></div>"
+      ],
+      "text/plain": [
+       "<Table length=14>\n",
+       "       field_id           field_name    ...     time_stop      rg_fd_id\n",
+       "                                        ...         d                  \n",
+       "       bytes32             bytes32      ...      float64        int64  \n",
+       "---------------------- ---------------- ... ------------------ --------\n",
+       "GNU2597312684324028416 PS_ELAISN1_MOS10 ...  56821.33210648148        1\n",
+       "GNU2597383053068206080 PS_ELAISN1_MOS11 ...  56815.50054271557        2\n",
+       "GNU2597453421812383744 PS_ELAISN1_MOS12 ... 56814.569061234084        3\n",
+       "GNU2597523790556561408 PS_ELAISN1_MOS13 ...  56819.53759259259        4\n",
+       "GNU2597594159300739072 PS_ELAISN1_MOS14 ...  56810.60611111111        5\n",
+       "GNU2597664528044916736 PS_ELAISN1_MOS15 ...  56810.67461805556        6\n",
+       "GNU2597734896789094400 PS_ELAISN1_MOS16 ...   56807.7931854022        7\n",
+       "GFU2597312684324028416 PS_ELAISN1_MOS10 ...  56504.46356481482        8\n",
+       "GFU2597383053068206080 PS_ELAISN1_MOS11 ...  56501.58207429109        9\n",
+       "GFU2597453421812383744 PS_ELAISN1_MOS12 ... 56508.650511791086       10\n",
+       "GFU2597523790556561408 PS_ELAISN1_MOS13 ...  56506.76889919705       11\n",
+       "GFU2597594159300739072 PS_ELAISN1_MOS14 ...  56513.78742151331       12\n",
+       "GFU2597664528044916736 PS_ELAISN1_MOS15 ...  56519.80583333333       13\n",
+       "GFU2597734896789094400 PS_ELAISN1_MOS16 ... 56510.974315863714       14"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -89,7 +139,8 @@
     "nr_srcs = len(tt_srcs)\n",
     "tt_srcs.sort(sort_par)\n",
     "tt_srcs.add_index(\"rg_src_id\")\n",
-    "#display(tt_srcs)\n"
+    "#display(tt_srcs)\n",
+    "display(rg.tt_fields)"
    ]
   },
   {
@@ -102,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "c038cd88-42e8-4897-a277-bbf207f4c930",
    "metadata": {
     "tags": []
@@ -111,7 +162,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e64ab616c3e6448e8c97d93181e8c980",
+       "model_id": "8a62104bb6814f9fa911c17fc99eeb9f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,7 +296,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b86fcc9a5704bd58044ee8c75bca793",
+       "model_id": "26ebe288cbfc44a3a6ef944d2dae0fd1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -283,14 +334,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "b4b6f33c-ac4d-4467-a780-804bee76b0dd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc86a072febf4692bfadc3da39f91f2f",
+       "model_id": "6a51e8d938cd40e58645173c2125e16c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -298,7 +349,7 @@
        "interactive(children=(IntSlider(value=27, description='block_nr', max=54), Output()), _dom_classes=('widget-in…"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
